Kubernetes/GKE/app/server.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: app
---
apiVersion: v1
kind: Service
metadata:
  name: crud-service
  namespace: app
spec:
  type: ClusterIP
  selector:
    app: crud-server
  ports:
    - name: crud
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  namespace: app
  labels:
    app: crud-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crud-server
  template:
    metadata:
      labels:
        app: crud-server
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - store
            topologyKey: "kubernetes.io/hostname"     
      imagePullSecrets:
      - name: regcred
      containers:
      - name: crud
        image: oleksandriyskiy/crud:latest
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 3
